fixed alignment

--- a/web/client/stylesheets/pages/admin.scss
+++ b/web/client/stylesheets/pages/admin.scss
@@ -1,5 +1,8 @@
 section#admin {
   background-color: #eee;
+  .pull-right {
+    margin-right: 15%;
+  }
   #emails {
     margin: 50px auto;
     width: 50%;
